ULF-558: Fixed word-break in Firefox

--- a/profiles/ulf/themes/ulf_default/sass/base/_base.scss
+++ b/profiles/ulf/themes/ulf_default/sass/base/_base.scss
@@ -34,7 +34,7 @@ h6 {
 
   /* Avoid long words breaking layout on mobile */
   -ms-word-break: break-all;
-  word-break: break-all;
+  word-break: normal;
 
   /* Non standard for WebKit */
   word-break: break-word;
